GNOME Bugzilla – Bug 707808
box-layout: Fix floating point truncation when calculating a child's size
Last modified: 2013-09-09 23:33:35 UTC
This was causing bouncing menus in gnome-shell.
Created attachment 254524 [details] [review] box-layout: Fix floating point truncation when calculating a child's size The child size is a float, not an int.
Review of attachment 254524 [details] [review]: looks good.
Attachment 254524 [details] pushed as ac70bd3 - box-layout: Fix floating point truncation when calculating a child's size