box-layout: Fix floating point truncation when calculating a child's size

The child size is a float, not an int.

https://bugzilla.gnome.org/show_bug.cgi?id=707808